fix: birthday bug, whitespace, event dates

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -72,12 +72,12 @@ a:hover {
         height: 2em;
         max-height: 2em;
         padding: 2px 5px;
-        margin: 2px;
+        margin: 2px 1px;
     }
 }
 
 hr {
-    margin: 5% 0%;
+    margin: 2% 0%;
     border-top: dotted var(--link-color) 1px;
     border-radius: 0;
 }
